--- a/frontend/src/styles/_nav.scss
+++ b/frontend/src/styles/_nav.scss
@@ -4,9 +4,12 @@ nav {
     width: 100%;
     display: flex;
     justify-content: center;
-    
+    background-color: $black;
+    position: fixed;
+    top: 0px;
+
     .navcontent {
-        position: fixed;
+        background-color: $black;
         padding: 20px 0;
         display: flex;
         flex-direction: row;
@@ -28,11 +31,21 @@ nav {
         gap: 30px;
         align-items: center;
         font-size: 14px;
+        .home {
+            transition: .2s;
+            &:hover {
+                color: $green;
+            }
+        }
         .demo {
             padding: 10px 14px;
             background-color: $green;
             color: $blue;
             border-radius: $br;
+            transition: .2s;
+            &:hover {
+                background-color: $white;
+            }
         }
     }
 }
