--- a/frontend/src/styles/_var.scss
+++ b/frontend/src/styles/_var.scss
@@ -3,6 +3,7 @@ $blue: #0D3866;
 $green: #13CF8F;
 $darkgrey: #232323;
 $darkgrey2: #5F5F5F;
+$darkgrey3: #242B33;
 $black: #000000;
 $white: #FFFFFF;
 
