--- a/frontend/src/styles/_input.scss
+++ b/frontend/src/styles/_input.scss
@@ -1,6 +1,6 @@
 @import '_var.scss';
 
-.inputsec {
+.inputsec, .outputsec {
     margin: 100px 0;
     // height: 100vh;
     display: flex;
@@ -124,7 +124,32 @@
                         }
                     }
                 }
-                
+                button {
+                    padding: 10px 0;
+                    font-size: 14px;
+                    color: $blue;
+                    font-weight: $fw-bold;
+                    width: 100%;
+                    border: none;
+                    background-color: $green;
+                    border-radius: $br;
+                    cursor: pointer;
+                    transition: .2s;
+                    &:hover {
+                        background-color: $white;
+                        svg {
+                            margin-left: 15px;
+                        }
+                    }
+                }
+                .outputimg {
+                    width: 100%;
+                    height: 451px;
+                    border-radius: $br;
+                    background-color: $darkgrey;
+                    margin-bottom: 30px;
+                    
+                }
                 
             }
             .right {
