finished front end

--- a/frontend/src/styles/_input.scss
+++ b/frontend/src/styles/_input.scss
@@ -177,6 +177,12 @@
                         height: 220px;
                         border-radius: $br;
                         background-color: $darkgrey;
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            border-radius: $br;
+                        }
                     }
                 }
                 input {
