--- a/frontend/src/styles/_input.scss
+++ b/frontend/src/styles/_input.scss
@@ -44,6 +44,10 @@
                 font-weight: $fw-light;
                 margin-bottom: 30px;
             }
+            .disc {
+                margin-top: 30px;
+                font-size: $fs-16px;
+            }
             .left {
                 display: flex;
                 flex-direction: column;
